<resources>
    <string name="app_name">Code Workshop</string>

    <string name="editor_cursor_position">1:1</string>
    <string name="editor_line_breaks">LF</string>
    <string name="editor_file_encoding">UTF-8</string>
    <string name="editor_default_indentation">1 Tab</string>
    <string name="editor_read_only">None</string>

    <string name="toolbar_file">项目</string>
    <string name="toolbar_terminal">命令行</string>
    <string name="toolbar_task">运行中的任务</string>

    <string name="menu_nav_file">文件</string>
    <string name="menu_nav_file_new">新建项目</string>
    <string name="menu_nav_file_new_project">新建项目</string>
    <string name="menu_nav_file_open">打开项目</string>
    <string name="menu_nav_file_save">保存文件</string>
    <string name="menu_nav_run">运行和调试</string>
    <string name="menu_nav_run_run">运行</string>
    <string name="menu_nav_run_debug">调试</string>
    <string name="menu_nav_run_config">编辑配置</string>
    <string name="menu_nav_help">查找帮助</string>
    <string name="menu_file_new">新建</string>
    <string name="menu_file_open">打开</string>
    <string name="menu_file_clone">复制</string>
    <string name="menu_file_past">粘贴</string>
    <string name="menu_file_rename">重命名</string>
    <string name="menu_file_copy">复制路径</string>
    <string name="menu_file_delete">删除</string>

    <string name="win_fileSelector_selected">选择：</string>

    <string name="text_sure">确定</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>