<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/menu_nav_file">
        <menu>
            <item
                android:id="@+id/menu_nav_file_new"
                android:title="@string/menu_nav_file_new" />
            <item
                android:id="@+id/menu_nav_file_open"
                android:title="@string/menu_nav_file_open" />
            <item
                android:id="@+id/menu_nav_file_save"
                android:title="@string/menu_nav_file_save" />
        </menu>
    </item>
    <item
        android:title="@string/menu_nav_run">
        <menu>
            <item
                android:id="@+id/menu_nav_run_run"
                android:title="@string/menu_nav_run_run" />
            <item
                android:id="@+id/menu_nav_run_debug"
                android:title="@string/menu_nav_run_debug" />
            <item
                android:id="@+id/menu_nav_run_stop"
                android:title="@string/menu_nav_run_config" />
        </menu>
    </item>
    <item
        android:title="@string/menu_nav_help" />
</menu>